@@ -1,21 +1,107 @@
+task copyToLib(type: Copy) {
+    into "$buildDir/libs/lib"
+    from configurations.runtime
+}
+
+//apply plugin: 'application'
+//
+//mainClassName = 'hello.HelloWorld'
+
+def currentOS = org.gradle.internal.os.OperatingSystem.current()
+
+def platform
+
+if (currentOS.isWindows()) {
+
+    platform = 'win'
+
+} else if (currentOS.isLinux()) {
+
+    platform = 'linux'
+
+} else if (currentOS.isMacOsX()) {
+
+    platform = 'mac'
+
+}
+
+//compileJava {
+//    doFirst {
+//        options.compilerArgs = [
+//                '--module-path', classpath.asPath,
+//                '--add-modules', 'javafx.controls,javafx.fxml'
+//        ]
+//    }
+//}
+
+task run(type: JavaExec) {
+    classpath sourceSets.main.runtimeClasspath
+    main = "com.iscas.biz.jf.FxApp"
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
+}
+
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    compile "org.openjfx:javafx-base:11:${platform}"
+
+    compile "org.openjfx:javafx-graphics:11:${platform}"
+
+    compile "org.openjfx:javafx-controls:11:${platform}"
+
+    compile "org.openjfx:javafx-fxml:11:${platform}"
+
+    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter'
-    compile group: 'de.roskenet', name: 'springboot-javafx-support', version: '2.1.6'
-    compile group: 'de.roskenet', name: 'springboot-javafx-test', version: '1.3.0'
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-   /* compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-graphics', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-media', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-swing', version: '11.0.2'
-    compile group: 'org.openjfx', name: 'javafx-web', version: '11.0.2'*/
 
-    compile fileTree(dir:'libs',include:['*.jar'])
+//    compile fileTree(dir:'fxlibs',include:['*.jar'])
 
     compile project(":common:common-tools")
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+//jar {
+//    manifest {
+//        attributes 'Main-Class': 'com.iscas.biz.jf.FxApp'
+//    }
+//    from {
+//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+//    }
+//}
+
+
+// 清除现有的lib目录
+task clearJar(type: Delete) {
+    delete "$buildDir\\libs\\lib"
+}
+
+// 将依赖包复制到lib目录
+task copyJar(type: Copy, dependsOn: 'clearJar') {
+    from configurations.compileClasspath
+    into "$buildDir\\libs\\lib"
+}
+
+bootJar {
+    // 例外所有的jar
+    excludes = ["*.jar"]
+    // lib目录的清除和复制任务
+    dependsOn clearJar
+    dependsOn copyJar
+
+    mainClassName = 'com.iscas.biz.jf.JFApp'
+    // 指定依赖包的路径
+    manifest {
+        attributes "Manifest-Version": 1.0,
+                'Class-Path': configurations.compileClasspath.files.collect { "lib/$it.name" }.join(' ')
+    }
 }
